# HFTMTeachingMaterial

./: pyproject.toml
BigDataAnalytics/view_aids/: Korrelationskoeffizient.ipynb  Wahrscheinlichkeit.ipynb  boxplot.ipynb
