[project]
name = "HFTMTeachingMaterial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "j4ggr", email = "reto.jaeggli@hftm.ch"},
]
dependencies = ["jupyterlab>=4.5.3", "matplotlib>=3.10.8", "daspi>=1.9.0", "pandas[excel]>=3.0.0", "ipywidgets>=8.1.8"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
